@@ -1,5 +1,8 @@
 2002-10-06  Masatake YAMATO  <yamato@redhat.com>
 
+	* output.c (at_output_shortlist): driverdescription
+	is freed.
+
 	* median.c (quantize): removed debug print.
 
 	* input*.[ch]: renamed all loader.
